tests/compile_errors/call_resolve_directly.stderr
error[E0603]: module `resolvable` is private
  --> $DIR/call_resolve_directly.rs:1:42
   |
1  | use ioc_rs::{ServiceCollection, Dynamic, resolvable::Resolvable};
   |                                          ^^^^^^^^^^ private module
   |
note: the module `resolvable` is defined here
  --> $DIR/lib.rs:47:1
   |
47 | mod resolvable;
   | ^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `resolve` found for struct `Dynamic<Arc<i32>>` in the current scope
 --> $DIR/call_resolve_directly.rs:6:37
  |
6 |     Dynamic::<std::sync::Arc<i32>>::resolve(&provider);
  |                                     ^^^^^^^ function or associated item not found in `Dynamic<Arc<i32>>`
  |
  = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
  |
1 | use ioc_rs::resolvable::Resolvable;
  |
